# vsim

./: CMakeLists.txt  LICENSE  README.md
CMake/: FindThirdParty.cmake  Templates.cmake
include/vsim/env/: base_element.hpp  body.hpp  camera.hpp  collision_shape.hpp  drawable.hpp  environment.hpp  frame.hpp  geometry.hpp  indexed_container.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  node.hpp  physics_model.hpp  physics_scene.hpp  pose.hpp  rigid_body.hpp  rigid_body_constraint.hpp  scene.hpp  scene_fwd.hpp
include/vsim/renderer/: ogl_shaders.hpp  renderer.hpp  scene.hpp  scene_fwd.hpp
include/vsim/util/: dictionary.hpp  filesystem.hpp  format.hpp  strings.hpp  variant.hpp  xml_sax_parser.hpp
include/vsim/util/detail/: format.hpp
src/: CMakeLists.txt
src/env/: assimp_loader.cpp  camera.cpp  lua_scripting.cpp  lua_scripting.hpp  mesh.cpp  model.cpp  model_loader.cpp  pose.cpp  scene_loader.hpp  xml_loader.cpp
src/renderer/: assimp_loader.cpp  glsl.cpp  glsl.hpp  ogl_shaders.cpp  renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  scene.cpp  scene_loader.cpp  scene_loader.hpp  tools.cpp  tools.hpp
src/renderer/shaders/: flat.fs  phong.fs  shaders.xml  textured.fs
src/tools/: glsl2src.cpp
src/util/: dictionary.cpp  filesystem.cpp  format.cpp  strings.cpp  xml_sax_parser.cpp
test/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp  test_bullet.cpp  test_lua.cpp  test_renderer.cpp  trackball.cpp  trackball.hpp
tools/: CMakeLists.txt  glsl2src.cpp
