PROJECT(VSIM)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Assimp)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLFW3 3.2 REQUIRED)
FIND_PACKAGE(FreeImage REQUIRED)

ADD_DEFINITIONS( -std=c++11 )


include_directories(
	include
	${EIGEN3_INCLUDE_DIR}
        ${FREEIMAGE_INCLUDE_DIRS}
	${GLFW3_INCLUDE_DIR}
)


IF ( CMAKE_COMPILER_IS_GNUCXX )
	SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wreturn-type" )
ENDIF( CMAKE_COMPILER_IS_GNUCXX )

SET (SRC_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/include/vsim)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(test)


